Tests/ContributeWordPressTests/Helpers/Error/SitesExportSynDecoderError.swift
import Foundation

internal enum SitesExportSynDecoderError: String, EquatableError {
  case fileURLsFromDirectory
}
